New ingestion method to include class balance

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -67,7 +67,6 @@
     "from dataclasses import dataclass\n",
     "from pathlib import Path\n",
     "\n",
-    "\n",
     "@dataclass(frozen=True)\n",
     "class DataIngestionConfig:\n",
     "    root_dir: Path\n",
@@ -82,7 +81,8 @@
     "    max_samples: int = None\n",
     "    min_samples: int = None\n",
     "    img_size: list = None\n",
-    "    working_dir: str = None"
+    "    working_dir: str = None\n",
+    "    batch_size: int = None  \n"
    ]
   },
   {
@@ -99,6 +99,7 @@
     "import zipfile\n",
     "from sklearn.model_selection import train_test_split\n",
     "import shutil\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from cnnClassifier.constants import CONFIG_FILE_PATH, PARAMS_FILE_PATH\n",
     "from cnnClassifier.utils.common import read_yaml, create_directories, get_size\n",
     "from cnnClassifier.entity.config_entity import DataIngestionConfig\n",
